--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.2.5",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
-    "eslint": "8.23.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "eslint": "^8.23.0",
     "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
     "typescript": "4.8.2"
   }
 }
