--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@next/eslint-plugin-next": "^12.2.5",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.23.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
+    "sass": "^1.55.0",
+    "styled-components": "^5.3.5",
+    "styled-reset": "^4.4.2",
     "typescript": "4.8.2"
   }
 }
