add: vueに移行するためぷっしゅ

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "next-practice",
   "version": "0.1.0",
+  "license": "UNLICENSED",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "modern-css-reset": "^1.4.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
